remove top navbar fade. Fix scrollbar position

--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -1,7 +1,7 @@
 #viewport {
 	display: flex;
 	width: 100%;
-	height: calc(100vh - 50px);
+	height: calc(100vh - 60px);
 	overflow: auto;
 	background: repeating-linear-gradient(
 		45deg,
@@ -10,7 +10,8 @@
 		rgba(0, 0, 0, 0.15) 60px,
 		rgba(0, 0, 0, 0.15) 120px
   );
-  padding-top: 50px;
+	margin-top: 60px;
+	overflow-y: scroll;
 }
 
 #login {
@@ -94,7 +95,7 @@
 	display: flex;
 	align-content: center;
 	font-size: 40;
-	height: 1.5em;
+	height: 60px;
 	border-bottom: solid rgba(0,0,0,0.4) thin;
 	z-index: 100;
 	top: 0;
@@ -246,6 +247,7 @@
 body {
 	margin: 0px;
 	background-color: #444444;
+	overflow: hidden;
 }
 
 div {
@@ -435,7 +437,7 @@ div {
 	.cert-grid-container {
 	  width: 50%;
   }
-	
+
 }
 
 @media only screen and (min-width: 1800px) {
